frontend/tests/cases/negative/ty-var-clashes.gr
data Foo a b where
  Bar : ∀ {a : Type, b : Type} . a → b → Foo a
